ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: "bar.jomo.click"
      http:
        paths:
        - path: "/test"
          pathType: Prefix
          backend:
            service:
              name: service-2048
              port:
                number: 3000
